# something-sonic

./: .gitignore  README.md  game.c  meson.build  sdlprog.c
src/: input.c  input.h  player.h
test/: testinput.c  testprog.c
